force-app/main/default/objects/genesis__Rule__c/fields/genesis__Enabled__c.field-meta.xml
<CustomField>
    <fullName>genesis__Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>