force-app/main/default/objects/genesis__Rule__c/fields/genesis__Evaluation_Expression__c.field-meta.xml
<CustomField>
    <fullName>genesis__Evaluation_Expression__c</fullName>
    <description>This field captures the evaluation expression for defining logical operators between the respective rule criterias</description>
    <inlineHelpText>This field captures the evaluation expression for  computing logical operations between respective rule criterias</inlineHelpText>
    <label>Evaluation Expression</label>
    <length>255</length>
    <type>Text</type>
</CustomField>