force-app/main/default/objects/genesis__Rule__c/fields/genesis__Message_failure__c.field-meta.xml
<CustomField>
    <fullName>genesis__Message_failure__c</fullName>
    <label>Message (failure)</label>
    <type>TextArea</type>
</CustomField>