force-app/main/default/objects/genesis__Rule__c/fields/genesis__Message_success__c.field-meta.xml
<CustomField>
    <fullName>genesis__Message_success__c</fullName>
    <label>Message (success)</label>
    <type>TextArea</type>
</CustomField>