force-app/main/default/objects/genesis__Rule__c/fields/genesis__Object_Type__c.field-meta.xml
<CustomField>
    <fullName>genesis__Object_Type__c</fullName>
    <label>Object Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>