force-app/main/default/objects/genesis__Rule__c/recordTypes/genesis__Generic.recordType-meta.xml
<RecordType>
    <fullName>genesis__Generic</fullName>
    <active>true</active>
    <label>Generic Rule</label>
</RecordType>