force-app/main/default/objects/genesis__Rule__c/validationRules/genesis__Application_Type_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>genesis__Application_Type_Only</fullName>
    <active>false</active>
    <errorConditionFormula>IF( ISBLANK( $Setup.ints__Org_Parameters__c.ints__Namespace_Prefix__c) , NOT(CONTAINS(genesis__Object_Type__c, &apos;applications__c&apos;)) , NOT(CONTAINS(genesis__Object_Type__c, $Setup.ints__Org_Parameters__c.ints__Namespace_Prefix__c + &apos;__applications__c&apos;)))</errorConditionFormula>
    <errorMessage>Presently rules can be created for Application Only</errorMessage>
</ValidationRule>