force-app/main/default/objects/genesis__Rule__c/validationRules/genesis__Unique_Rule_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>genesis__Unique_Rule_Name</fullName>
    <active>true</active>
    <errorConditionFormula>IF( (ISNEW() ||  ISCHANGED(Name)) &amp;&amp; Name =  VLOOKUP( $ObjectType.genesis__Rule__c.Fields.Name ,  $ObjectType.genesis__Rule__c.Fields.Name , Name),true,false )</errorConditionFormula>
    <errorMessage>Rule Name must be Unique</errorMessage>
</ValidationRule>